fix gap between page and menu scroll

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -18,6 +18,7 @@
   padding-block: 25px 31px;
   overflow: auto;
   opacity: 0;
+  box-sizing: border-box;
   font-weight: 700;
   text-transform: uppercase;
   color: $header-color;
