--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -1,17 +1,9 @@
-.page {
-  font-family: "Cinzel", Arial, serif;
-  font-style: normal;
-  scroll-behavior: smooth;
+body {
+  margin: 0;
 }
 
-.page__body {
-  margin: 0;
-  z-index: 1;
+main {
   background: $header-color;
-  color: $main-color;
-  &::-webkit-scrollbar {
-    display: none;
-  }
 }
 
 h1,
